# Project_Directory_2

./: CHANGELOG.md  README.md
.github/workflows/: release.yml
directory_2/: .gitignore  Cargo.toml  app.rc  build.rs  dir2_history.txt
directory_2/src/: commands.rs  commands_ext.rs  completion.rs  delegation.rs  docs.rs  favorites.rs  file_system_state.rs  filesystem.rs  indexer.rs  indexing.rs  jobs.rs  main.rs  parser.rs  pipe_executor.rs  raw_input.rs  search.rs  shell.rs  sql_engine.rs  tui.rs  utils.rs  value.rs
docs/: CNAME  commands.html  index.html  installation.html  usage.html
docs/css/: style.css
website/js/: script.js
