[package]
name = "dir2"
version = "1.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
colored = "3.0.0"
comfy-table = "7.2.2"
crossterm = "0.29.0"
dirs = "6.0.0"
lazy_static = "1.5.0"
open = "5.3.2"
regex = "1.12.4"
rust_search = "2.1.0"
rustyline = "18.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlparser = "0.62.0"
tokio = { version = "1.43.0", features = ["full"] }
walkdir = "2.5.0"

[build-dependencies]
winres = "0.1"
